<resources>
    <string name="app_name">Daily Film</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="text_next">다음</string>
    <string name="text_complete">완료</string>
    <string name="cancel">취소</string>
    <string name="accept">완료</string>
    <string name="date">%s년 %s월 %s일</string>
    <string name="text_date">날짜</string>
    <string name="text_description">내용</string>
    <string name="before">이전</string>
    <string name="text_close">닫기</string>
    <string name="guide_required_permission_title">필수권한 안내</string>
    <string name="guide_required_permission_message">아래와 같은 이유로 권한 허용이 필요합니다.\n\n1.동영상 접근 권한 \n -영상등록을 위하여 필요합니다.</string>
    <string name="text_re_request">재요청</string>
    <string name="text_change_setting">설정변경</string>
    <string name="guide_choice_video">비디오를 선택해주세요.</string>
    <string name="guide_accept_permission">앱을 원활히 사용하시려면 권한 허용을 설정 부탁드립니다.</string>
    <string name="retry">재시도</string>
    <string name="logout">로그아웃</string>
    <string name="deleteAccount">탈퇴하기</string>
    <string name="delete">삭제하기</string>
    <string name="re_upload">재 업로드</string>
    <string name="edit_text">텍스트 편집</string>
    <string name="delete_dialog">정말로 삭제 하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="guide_min_size">최소 촬영시간은 10초입니다.</string>
    <string name="guide_check_date">날짜를 선택 해주세요</string>
    <string name="guide_not_exisxt_video">영상이 존재 하지 않습니다.</string>
    <string name="guide_camera_error">현재 디바이스에 카메라 기능이 없습니다.</string>
    <string name="connect_network">네트워크 연결을 확인해주세요.</string>
    <string name="search">검색</string>
    <string name="thumbnail">썸네일</string>
    <string name="move_date">날짜로 이동</string>
    <string name="play_total">한 달 전체 재생</string>
    <string name="select_date_range">검색 범위 선택</string>
    <string name="desc_search_range">검색 범위를 설정하세요.</string>
    <string name="setting">설정</string>
    <string name="dailyfilm_logo">데일리필름 로고</string>
    <string name="google_logo">구글 로고</string>
    <string name="sign_in_with_google">구글계정으로 로그인하기</string>
    <string name="confirm">확인</string>
    <string name="dismiss">취소</string>
    <string name="logOut_description">정말 로그아웃 하시겠습니까?</string>
    <string name="delete_user_description">정말 탈퇴 하시겠습니까?</string>
    <string name="account">계정</string>
    <string name="setting_toolbar_title">설정 화면</string>
    <string name="title_activity_total_compose">TotalComposeActivity</string>
    <string name="failed_google_login">Failed Google Login</string>
    <string name="card_date_format">%s년 %s월 %s일</string>
    <string name="lottie_sound">sound_lottie.json</string>
    <string name="control_speed">속도 조절</string>
</resources>