<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="java.util.Calendar"/>

        <variable
            name="viewModel"
            type="com.boostcamp.dailyfilm.presentation.calendar.CalendarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/img_btn_date_picker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/img_btn_go_today"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

       <TextView
            android:id="@+id/tv_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            tools:text="5월"
            android:text="@{viewModel.calendarFlow}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_sun"
            style="@style/weekTextViewStyle"
            android:text="@string/sunday"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/tv_test"
            app:layout_constraintEnd_toStartOf="@id/tv_mon"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_mon"
            style="@style/weekTextViewStyle"
            android:text="@string/monday"
            app:layout_constraintTop_toTopOf="@id/tv_sun"
            app:layout_constraintStart_toEndOf="@id/tv_sun"
            app:layout_constraintEnd_toStartOf="@id/tv_tus"/>

        <TextView
            android:id="@+id/tv_tus"
            style="@style/weekTextViewStyle"
            android:text="@string/tuesday"
            app:layout_constraintTop_toTopOf="@id/tv_sun"
            app:layout_constraintStart_toEndOf="@id/tv_mon"
            app:layout_constraintEnd_toStartOf="@id/tv_wen"/>

        <TextView
            android:id="@+id/tv_wen"
            style="@style/weekTextViewStyle"
            android:text="@string/wednesday"
            app:layout_constraintTop_toTopOf="@id/tv_sun"
            app:layout_constraintStart_toEndOf="@id/tv_tus"
            app:layout_constraintEnd_toStartOf="@id/tv_thr"/>

        <TextView
            android:id="@+id/tv_thr"
            style="@style/weekTextViewStyle"
            android:text="@string/thursday"
            app:layout_constraintTop_toTopOf="@id/tv_sun"
            app:layout_constraintStart_toEndOf="@id/tv_wen"
            app:layout_constraintEnd_toStartOf="@id/tv_fri"/>

        <TextView
            android:id="@+id/tv_fri"
            style="@style/weekTextViewStyle"
            android:text="@string/friday"
            app:layout_constraintTop_toTopOf="@id/tv_sun"
            app:layout_constraintStart_toEndOf="@id/tv_thr"
            app:layout_constraintEnd_toStartOf="@id/tv_sat"/>

        <TextView
            android:id="@+id/tv_sat"
            style="@style/weekTextViewStyle"
            android:text="@string/saturday"
            android:textColor="@color/blue"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_sun"
            app:layout_constraintStart_toEndOf="@id/tv_fri"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_calendar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_wen" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="@{() -> viewModel.uploadClicked()}"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>